DE1365 - cropped avatars, DE1362 - avatar name rect. fix

--- a/web/static/css/app.sass
+++ b/web/static/css/app.sass
@@ -393,7 +393,7 @@ body
         display: block
       svg
         @media (max-width: 1199px)
-          width: 13vw
+          width: 13vw !important
           height: 14vw
       svg text.svg-avatar-topic
         display: none
